# TerminalX

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  terminal.c
app/src/main/java/com/termx/: MainActivity.kt
app/src/main/java/com/termx/engine/: TerminalEngine.kt
app/src/main/java/com/termx/model/: Session.kt  SessionManager.kt
app/src/main/java/com/termx/ui/: CreateSessionDialog.kt  MainScreen.kt  TerminalTab.kt  X11Tab.kt
app/src/main/res/values/: strings.xml  themes.xml
